# UNIPI-MIM

./: .gitignore  PROGRAM.md  QUICK_START.md  README.md  SCHEDULE.md  install.py  run.py
.github/: copilot-instructions.md  slide.prompt.md
.kiro/specs/markdown-slides-generator/: design.md  requirements.md  tasks.md
app/: .gitignore  MANIFEST.in  Makefile  README.md  README_TESTING.md  ROADMAP.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TEST_INVESTIGATION_SUMMARY.md  pyproject.toml  requirements.txt  run_comprehensive_tests.py  setup.py  test_slide_only_fix.py
app/examples/advanced-machine-learning/: enhanced-slides.html
app/examples/advanced-machine-learning/output/: lecture_notes.qmd  lecture_slides.aux  lecture_slides.pptx  lecture_slides.qmd  lecture_slides.tex
app/src/markdown_slides_generator/: __init__.py  cli.py
app/src/markdown_slides_generator/batch/: __init__.py  batch_processor.py  file_scanner.py  progress_reporter.py
app/src/markdown_slides_generator/config/: __init__.py  config_manager.py  validation.py
app/src/markdown_slides_generator/core/: __init__.py  content_splitter.py  quarto_orchestrator.py
app/src/markdown_slides_generator/latex/: __init__.py  latex_processor.py  math_renderer.py
app/src/markdown_slides_generator/themes/: __init__.py  template_manager.py  theme_manager.py
app/src/markdown_slides_generator/themes/assets/templates/handouts/academic-handouts-pdf/: config.json  frontmatter.yaml  template.qmd
app/src/markdown_slides_generator/themes/assets/templates/notes/academic-notes-pdf/: config.json  frontmatter.yaml  template.qmd
app/src/markdown_slides_generator/themes/assets/templates/slides/academic-slides-beamer/: config.json  frontmatter.yaml
app/src/markdown_slides_generator/themes/assets/templates/slides/academic-slides-revealjs/: config.json  frontmatter.yaml  template.qmd
app/src/markdown_slides_generator/utils/: __init__.py  bibliography.py  exceptions.py  live_server.py  logger.py  watchdog_utils.py
app/src/markdown_slides_generator/validation/: __init__.py  content_validator.py  image_validator.py  link_checker.py  quality_analyzer.py  slide_optimizer.py
app/tests/: __init__.py  conftest.py  test_batch_processing_comprehensive.py  test_bibliography_expansion.py  test_cli.py  test_config_comprehensive.py  test_content_routing.py  test_content_validation_comprehensive.py  test_directive_parser.py  test_integration_academic_content.py  test_latex_integration.py  test_latex_processor.py  test_math_renderer.py  test_performance_comprehensive.py  test_quarto_config_management.py  test_quarto_orchestrator.py  test_quarto_orchestrator_comprehensive.py  test_regression_suite.py  test_template_manager.py  test_theme_manager.py
docs/: index.html
examples/advanced-machine-learning/: config-pdf.yaml  enhanced-notes.tex
examples/advanced-machine-learning/output/: lecture_notes.tex  lecture_slides.html
lectures/Lecture 01/: A_Lecture_notes.md  C_Setup.md  Exercises.md  Lecture_notes-bak.md  Lecture_notes.md  config-calm-builtin.yaml  config-calm-revealjs.yaml  config-fancy-builtin.yaml  config-fancy-revealjs.yaml  config.yaml  course_references.bib  full_course_references.bib  hybrid_ai.bib  markdown-slides-config.yaml  medical_imaging.bib  model_checking.bib  normative_acts.bib
lectures/Lecture 01/output/: A_Lecture_notes_slides.html
lectures/Lecture 01/styles/: font-override.css  unipi-lecture01-fancy-sans.scss
lectures/domain_knowledge/: README.md  REFERENCES.md  requirements.txt
lectures/domain_knowledge/config/: fetch_config.example.json
lectures/domain_knowledge/pdfs/: 1-s2.0-S0933365725000892-main.converted.md  2012.13289v1.converted.md  (+7 more)
syllabus/: Agenda-2030-Onu-italia.pdf.txt  FORM.md  PROMPT.md  SYLLABUS.md  UNIPI_PdQ_Linee Guida compilazione SYLLABUS.pdf.txt  agenda-2030.md  esempio.md  istruzioni-brevi.md  sviluppo-sostenibile.md
tests/: test_full_bibliography_expansion.py
(+5 files in other folders)
